Added About... screen

--- a/src/rom/v1-3/.vscode/tasks.json
+++ b/src/rom/v1-3/.vscode/tasks.json
@@ -33,6 +33,21 @@
             }
         },        
         {
+            "label": "SaveToROM",
+            "type": "shell",
+            // Next command merges four identical copies of the AQUBASIC binary into a single 64kb ROM file in the root of the project
+            "command": "Get-Content zout/aqubasic.cim -Encoding Byte | Set-Content aqubasic.rom -Encoding Byte",
+            "group":  "build",
+            "presentation": {
+                "echo": false,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": true
+            }
+        },        
+        {
             "label": "Make ROM",
             "type": "shell",
             "group": {
@@ -40,7 +55,7 @@
                 "isDefault": true
             },
             "dependsOrder": "sequence",
-            "dependsOn": ["CompileBASIC", "SaveToBIN"]
+            "dependsOn": ["CompileBASIC", "SaveToBIN", "SaveToROM"]
         }
     ]
 }
