Updates from SPH

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 pcb/eagle/aq_mx_v1-4-0c.b\#6
 *.b#7
 *.s#3
-zout/aqubasic.cim
-zout/aqubasic.hex
-zout/USBBasic.rom
+src/rom/v1-3/zout/aqubasic.cim
+src/rom/v1-3/zout/aqubasic.hex
+src/rom/v1-3/zout/USBBasic.rom
 .vscode/tasks.json
-zout/aqubasic (1).rom
+src/rom/v1-3/zout/aqubasic (1).rom
