--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
 
-*.b#1
-*.b#2
-*.b#3
-*.b#4
-*.s#1
-*.b#5
-*.s#2
-pcb/eagle/aq_mx_v1-4-0c.b\#6
-*.b#7
-*.s#3
-.vscode/tasks.json
+*.b#*
+*.s#*
 zout/
 src/rom/v1-3/*.bat
-docs/~$Alpha Test Plan - USB BASIC v1.3.xlsx
-*.b#6
+docs/~$*.xlsx
