--- a/src/rom/v2-0/.vscode/tasks.json
+++ b/src/rom/v2-0/.vscode/tasks.json
@@ -20,7 +20,7 @@
         {
             "label": "SaveToBIN",
             "type": "shell",
-            // Next command merges four identical copies of the AQUBASIC binary into a single 64kb ROM file in the root of the project
+            // Next command merges four identical copies of the AQUBASIC binary into a single 64kb BIN file in the root of the project
             "command": "Get-Content zout/aqubasic.cim, zout/aqubasic.cim, zout/aqubasic.cim, zout/aqubasic.cim -Encoding Byte | Set-Content AQ_MX_ROM.BIN -Encoding Byte",
             "group":  "build",
             "presentation": {
@@ -35,7 +35,7 @@
         {
             "label": "SaveToROM",
             "type": "shell",
-            // Next command merges four identical copies of the AQUBASIC binary into a single 64kb ROM file in the root of the project
+            // Next command creates a 16kb ROM file in the root of the project
             "command": "Get-Content zout/aqubasic.cim -Encoding Byte | Set-Content aqubasic.rom -Encoding Byte",
             "group":  "build",
             "presentation": {
@@ -50,8 +50,23 @@
         {
             "label": "MakeDOC",
             "type": "shell",
-            // Next command merges four identical copies of the AQUBASIC binary into a single 64kb ROM file in the root of the project
+            // Pulls user docs (preceded with ;;;) from all ASM files, alphabetizes the sections, and outputs README.md file
             "command": "python makedoc.py",
+            "group":  "build",
+            "presentation": {
+                "echo": false,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": true
+            }
+        },        
+        {
+            "label": "MakeDEV",
+            "type": "shell",
+            // Pulls user docs (preceded with ;;) from all ASM files, alphabetizes the sections, and outputs DEVNOTES.md file
+            "command": "python makedev.py",
             "group":  "build",
             "presentation": {
                 "echo": false,
@@ -70,7 +85,7 @@
                 "isDefault": true
             },
             "dependsOrder": "sequence",
-            "dependsOn": ["CompileBASIC", "SaveToBIN", "SaveToROM","MakeDOC"]
+            "dependsOn": ["CompileBASIC", "SaveToBIN", "SaveToROM","MakeDOC","MakeDEV"]
         }
     ]
 }
